possible fix for text overflow again...

--- a/scripts/layout/common.css
+++ b/scripts/layout/common.css
@@ -368,14 +368,18 @@ td {
 
 	.scroll_div {
 		white-space: nowrap;
-		width: 200px;
+		width: 175px;
 		overflow-x: scroll;
+		margin-left: 1.25%;
+		margin-right: 1.25%;
 	}
 
 	.lists .scroll_div {
 		white-space: nowrap;
 		width: 300px;
 		overflow-x: scroll;
+		margin-left: 1.25%;
+		margin-right: 1.25%;
 	}
 
 	p,
@@ -383,8 +387,8 @@ td {
 	.sh_cpp,
 	.center_text {
 		font-size: 85%;
-		margin-left: 1.25%;
-		margin-right: 1.25%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	/* separated from above so as not to mess with margins */
